tests/baselines/reference/systemModule14.errors.txt
tests/cases/compiler/systemModule14.ts(5,17): error TS2307: Cannot find module 'foo'.


==== tests/cases/compiler/systemModule14.ts (1 errors) ====
    function foo() {
        return a;
    }
    
    import {a} from "foo";
                    ~~~~~
!!! error TS2307: Cannot find module 'foo'.
    export {foo}
    
    var x = 1;
    export {foo as b}